# Data-Structure

Final project/: README.md
Final project/.ipynb_checkpoints/: Final Project Example-checkpoint.ipynb
Final project/checkpoint/: final project checkpoint-Copy1.ipynb  final project checkpoint.ipynb
Final project/final proposal/: README.md
Final project/wi_zm2383/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
Final project/wi_zm2383/docs/: Makefile  conf.py  example.ipynb  make.bat
Final project/wi_zm2383/src/wi_zm2383/: __init__.py  wi_zm2383.py
Final project/wi_zm2383/tests/: test_wi_zm2383.py
hw01/: answer 42.py  hw1.ipynb
hw02/: hw2.ipynb
hw02/data/: binge_clean.csv
hw03/: HW3.ipynb
hw04/: HW4.ipynb
hw05/: hw05.ipynb  未命名.ipynb
hw06/.ipynb_checkpoints/: hw06-checkpoint.ipynb
hw07/: hw07.ipynb
hw07/.ipynb_checkpoints/: hw07-checkpoint.ipynb
hw08/: data.csv  hw08.ipynb
hw08/.ipynb_checkpoints/: hw08-checkpoint.ipynb
hw09/.ipynb_checkpoints/: hw09-checkpoint.ipynb
