[tool.poetry]
name = "wi_zm2383"
version = "0.1.2"
description = "get weather information"
authors = ["Zhenwei Ma"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
